# ChangeLog for dev-python/pyev
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyev/ChangeLog,v 1.5 2013/10/13 08:56:02 pacho Exp $

  13 Oct 2013; Pacho Ramos <pacho@gentoo.org> pyev-0.8.1.ebuild:
  Also compatible with python3_3

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> pyev-0.8.1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  17 Mar 2013; Zac Medico <zmedico@gentoo.org> pyev-0.8.1.ebuild:
  Fix SRC_URI.

  17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
  Add proxy-maintainers to metadata.xml

*pyev-0.8.1 (17 Mar 2013)

  17 Mar 2013; Thomas Kahle <tomka@gentoo.org> +metadata.xml,
  +pyev-0.8.1.ebuild:
  Initial commit, bug 461498, Ebuild by Dennis Lan, proxy commit.