@@ -3,12 +3,22 @@ Hash: SHA256
 
 DIST pyev-0.8.1-4.04.tar.gz 623423 SHA256 5e634953c08d27141f7e64c0c85fb64ea9756545309073ea8cd5b0a7050950e5 SHA512 59fd8564445822c12032889c826ad148b15544462aa72d4658cc5887b5af3542e399d2d47767f935f8638836f9ba954e4c8ceef6f5f630e3ee035ba96d339e1d WHIRLPOOL a66bca355e6ff05730fd9ba51c66d6dd7bd343fa5ddfe83fb5f6a3cd1bf1216d8916249cc9f0310f2db37ad44a3bbc66547fa59fc5aca88e401f9f10f64be443
 EBUILD pyev-0.8.1.ebuild 746 SHA256 ff98227ec9d7a14de50d19e6e180caa1d3f3b061abb183788dfdede6cc9a5a7b SHA512 909d40902bf4ec5ea4e32cdc41a222e68a68e541b9078a6d5d43107a928e824b56c7873c7cf20aa3985b2330901eb5836c302c89ef2de5aec0007802756d064b WHIRLPOOL 518e80e57e9c4f3dcb2226884301a3dd1248234f34329a8299144c771d62fee7b61e1793547a3f1c66d2e134261c884aa32a9a5c9010b79d09b9b863ee8903dc
-MISC ChangeLog 789 SHA256 a6b76060f80eed47f13a3e1ad469390505880289b2c875fb9b1992aaf279a382 SHA512 07266e00af6853839250afe4b58a68010f5f5f2d28f7a2096eeeabeb381870be43336b90a5320dafe61857144ba26b91910f42238c4bc4587ca50c23e2810c72 WHIRLPOOL 7bc8a1c5c2897cc7de188811012532bfc0ffd399b5fb1d60027c39efdd134f19796b7e4f52e01b4f85aae8af1f54bed74500875c2b461e316563e916192f83aa
-MISC metadata.xml 715 SHA256 b843bbfa3238fa9897e33571d73d5b8a658a41a0c0ec01378b03b47fff5cf2fd SHA512 ff85e47bbb2adda0e9bc819dc306d5801dced61cc60e07f44d531730cbd1ef9d338452172c3a871c2468679b86fc0987f227bbb8b262286af61c578dc2ee2843 WHIRLPOOL a7441b403b7291dd6bb4a07fd331a0d1c306f95df7bffb7ba94a69ab6a0d21fd76e3b02cd7c61a0589fcd40ab1633ccafabc853eb9d2d6fa2547bfca1c2d18cd
+MISC ChangeLog 872 SHA256 a2ce980de64ce4d007bad9d9116b788b197a96108f1ef5069e5c999300918ba6 SHA512 36e3984388955088a7274cb2c6b6fb2ae8f1e8da68f87cf06d53bec4c40e4ec31554f8caae3398d34c45a9759001c05ecb8832ca62c5b13b65b7fec5da39ce8d WHIRLPOOL 0ca295ee6c5b90959be427c16c76f4bcdd7b3ef98fd1a2453bbdba589a1176dac7c603063c3ff3e54813233e750ff02ff0beeab14382e9d0a9f658939217ac79
+MISC metadata.xml 456 SHA256 4badd69136130cc323af9f93e52953aea9b62f934b5415881a675099f0aa683b SHA512 611155604ca06fdaf0fa3b8b477d4ff4c2cb9167ab233a0bcad839cbc80c4ea84072abd286384d4b62064409ad673f3c8da3888fb7453c8dcd9a167b19774e27 WHIRLPOOL 5994de6406f6447c6a53e1a1395328c0bf26c133cdd470f29aa4c3bf97a5b67b3bb059f8ecc0e3d910279ac4ad2ce1ad48826204327332e4868fbf39babd3826
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlJaYCMACgkQCaWpQKGI+9ScSACfU7NOEqW9po48X4atoUf5ZfUV
-GLYAn10XRBATk9dJYUkRLINFy3QKVrPZ
-=lD0+
+iQIcBAEBCAAGBQJS2NVpAAoJEJIMDbyqvv1VclMP/2nOHGPIVAdMXL1BOp8+L6Q7
+JQzC4tI6BqLblDQQ4Kh8FJzI15bCF/VyGO2ljZ6Pryyqfoq1D9Lw+reqmctrPrfu
+R1xyQ6dh3nzZwJSeXkpofMGR668eR9uwVNsqwBBoNw4StAukeBZUTLzDo5z0VBEb
+GXtgZo+sDfPFk9aqLR75VpurtJPeG/CBn6TzyK4ST+IDRspxtogbL4V4SE7YQikU
+4aak7h05eU5Qc0fgreSMTVRYt5WsrZ1pk9xMEkekMahSHX1sdopcsLgdmmdnKyjP
+Bfsdm4rx0e54Q6WO1NEdFxSZGwjvOilZ+0MHobBvkccT5C1XZrCLIXtHgu46tccC
+WfTg2+0OUBfM3kIp0hZajjseaYPXZEN/vS3YpCzsTCXDFqZKe4MujosEHRjYDbmy
+0gKk5vqghiy5QYObhz/Vfh1nuIooq7i/K7IEoqFwmcZF33uYIdzq1RfCg+oyUxtT
+LZ6qEf/hsLsznbJKOdiBIaw3b90KH5QXhSTivq8XoU/oYLMq0xvcB5DuVU3COql1
+vHwMqqnAe0vCVoUNqj1yyA+EWI/jHhowiPCzrXWTNinZ4qdcpXqQSRysMtfQDtjL
++O5nJ5ZzBV4H8oimOUwi4g1kVVLaCL2/7lrIfjr5wEVnDVGNYLVaZKs08KmE7JdF
+qyuPKyfc3hOYDMXIUQnm
+=1wCU
 -----END PGP SIGNATURE-----
