@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyev
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyev/ChangeLog,v 1.5 2013/10/13 08:56:02 pacho Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyev/ChangeLog,v 1.6 2014/01/17 07:12:22 dlan Exp $
+
+  17 Jan 2014; Yixun Lan <dlan@gentoo.org> metadata.xml:
+  update maintainer email
 
   13 Oct 2013; Pacho Ramos <pacho@gentoo.org> pyev-0.8.1.ebuild:
   Also compatible with python3_3
